S2/grammar.txt
<command> ::= <movement>. | <turn>. | <brush_mode>. | <color_change>. | <repeat>.
<movement> ::= <move> <decimal>
<move> ::= FORW | BACK | 
<turn> ::= <angle> <decimal>
<angle> ::= LEFT | RIGHT
<brush_mode> ::= UP | DOWN
<color_change> ::= COLOR <hex_code>
<hex_code> ::= # <hex_character> | <hex_character> | <hex_character> | <hex_character> | <hex_character> | <hex_character>
<hex_character> ::= <digit> | A | B | C | D | E | F
<digit> ::= 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9
<decimal> ::= <digit> | <digit> <decimal>
<repeat> ::= REP <decimal> <command> | REP <decimal> "<command>" | REP <decimal> "<command_sequence>"
<command_sequence> ::= <command> | <command> <command_sequence>
